--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@
     padding: 10px 20px;
     background-color: #ededed;
     position: -webkit-sticky;
-    position: sticky;
+    position: fixed;
+    height: 100vh;
 }
 .sidebar .logo{
     font-size: 20px;
@@ -51,6 +52,8 @@
     flex-direction: column;
     gap: 35px;
     font-size: 20px;
+    margin-left: 400px;
+    max-width: 1000px;
 }
 h1{
     font-size: 35px;
@@ -64,7 +67,7 @@ h1{
 }
 .code{
     height: 100px;
-    width: 1500px;
+    width: 1000px;
     background-color: lightgray;
     padding: 10px 20px;
     margin: 10px 0px;
